--- a/styles/board-responsive.css
+++ b/styles/board-responsive.css
@@ -8,7 +8,7 @@
     .column-title {
         font-size: 16px;
     }
-
+/* 
     .add-task-dialog {
         width: 1000px;
         height: 640px;
@@ -21,7 +21,7 @@
 
     .add-task-dialog .task-form {
         gap: 24px;
-    }
+    } */
 }
 
 @media (max-width: 1260px) {
@@ -74,7 +74,7 @@
     }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1070px) {
 
 
     .add-task-dialog {
@@ -87,7 +87,7 @@
 
     .add-task-dialog .task-form {
         flex-direction: column;
-        gap: 24px;
+        gap: 16px;
     }
 
     .add-task-dialog .form-left,
